--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "lint": "eslint \"src/**/*.ts\"",
         "lint:fix": "eslint \"src/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\"",
-        "hook:path": "git config core.hooksPath .hooks || echo 'Not in a git repo'",
+        "hook:path": "git config core.hooksPath .git-hooks || echo 'Not in a git repo'",
         "version:update": "node scripts/version-updater.js",
         "version:major": "node scripts/version-updater.js major",
         "version:minor": "node scripts/version-updater.js minor",
@@ -57,5 +57,15 @@
         "dist",
         "LICENSE",
         "README.md"
-    ]
+    ],
+    "dependencies": {
+        "lint-staged": "^16.2.7",
+        "typeorm": "^0.3.27"
+    },
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx}": [
+            "eslint --cache --fix",
+            "prettier --write"
+        ]
+    }
 }
